--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "uglify-js-brunch": "1.0.x || 1.1.x",
     "clean-css-brunch": "1.0.x || 1.1.x",
 
-    "express":       "~2.5.11"
+    "express": "~2.5.11",
+    "socket.io": "0.9.x",
+    "redis": "0.5.x"
+
   },
   "devDependencies": {
     "mocha": "0.14.0",
