--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "start": "brunch watch --server"
   },
   "dependencies": {
+    "coffee-script": "1.3.3",
     "javascript-brunch": "1.0.x || 1.1.x",
     "coffee-script-brunch": "1.0.x || 1.1.x",
 
