--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "clean-css-brunch": "1.0.x || 1.1.x",
 
     "express": "~2.5.11",
-    "socket.io": "0.9.x",
+    "socket.io": "~0.9.6",
     "redis": "0.5.x",
     "redis-url": "0.1.0",
     "pg": "0.5.4"
