--- a/package.json
+++ b/package.json
@@ -9,33 +9,26 @@
     "url": ""
   },
   "engines": {
-    "node": "~0.6.10"
+    "node": "~0.8.8"
   },
   "scripts": {
     "start": "brunch watch --server"
   },
   "dependencies": {
     "coffee-script": "1.3.3",
-    "javascript-brunch": "1.0.x || 1.1.x",
-    "coffee-script-brunch": "1.0.x || 1.1.x",
-
-    "css-brunch": "1.0.x || 1.1.x",
-    "stylus-brunch": "1.0.x || 1.1.x",
-
-    "handlebars-brunch": "1.0.x || 1.1.x",
-    
-    "uglify-js-brunch": "1.0.x || 1.1.x",
-    "clean-css-brunch": "1.0.x || 1.1.x",
-
+    "javascript-brunch": "1.3.x",
+    "coffee-script-brunch": "1.3.x",
+    "css-brunch": "1.3.x",
+    "stylus-brunch": "1.3.x",
+    "handlebars-brunch": "1.3.x",
+    "uglify-js-brunch": "1.3.x",
+    "clean-css-brunch": "1.3.x",
     "express": "~2.5.11",
     "socket.io": "~0.9.6",
-    "redis": "0.5.x",
-    "redis-url": "0.1.0",
-    "pg": "0.5.4"
+    "mongoose": "~2.6.x"
 
   },
   "devDependencies": {
-    "mocha": "0.14.0",
     "expect.js": "0.1.2"
   }
 }
