--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "Social Tab App",
   "version": "0.0.1",
   "homepage": "",
+  "subdomain": "opentab",
   "repository": {
     "type": "git",
     "url": ""
   },
   "engines": {
-    "node": "~0.8.8"
+    "node": "~0.8.x"
   },
   "scripts": {
-    "start": "brunch watch --server"
+    "start": "server.coffee"
   },
   "dependencies": {
     "coffee-script": "1.3.3",
