--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Bash Ash",
   "name": "openTab",
   "description": "Social Tab App",
-  "version": "0.0.1",
+  "version": "0.0.1-7",
   "homepage": "",
   "subdomain": "opentab",
   "repository": {
@@ -27,7 +27,6 @@
     "express": "~2.5.11",
     "socket.io": "~0.9.6",
     "mongoose": "~2.6.x"
-
   },
   "devDependencies": {
     "expect.js": "0.1.2"
